--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -1498,8 +1498,8 @@ layers:
                             visible: *text_visible_secondary
                             text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
                             font:
-                                fill: [0.3,0.3,0.3]
-                                size: 10px
+                                fill: [0.2,0.2,0.2]
+                                size: 11px
                                 stroke: { color: [0.95,0.95,0.95], width: 2 }
                 labels-secondary2:
                     filter: { $zoom: { min: 16, max: 18 } }
@@ -1736,7 +1736,17 @@ layers:
                 draw:
                     lines:
                         cap: butt
-            labels-minor_road:
+            labels-minor_road-z15:
+                filter: { $zoom: 15 }
+                draw:
+                    text:
+                        priority: 6
+                        visible: *text_visible_minor_road_e
+                        text_source: name
+                        font:
+                            fill: [0.45,0.45,0.45]
+                            size: 9px
+            labels-minor_road-z16:
                 filter: { $zoom: { min: 16, max: 18 } }
                 draw:
                     text:
