--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -2178,7 +2178,7 @@ layers:
                 visible: false
                 style: lines
                 order: 51
-                color: [0.6, 0.6, 0.6]
+                color: [[14,[0.70,0.70,0.70]],[15,[0.65, 0.65, 0.65]],[17,[0.60, 0.60, 0.60]]]
                 width: [[14, 0.6px], [15, 0.65px], [16, 1px], [18, 1.25px]]
 
         # turn interactive feature selection on for buildings with names
