cleaning up water boundary color transitions

--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -953,7 +953,7 @@ layers:
                 line2:
                     style: lines
                     order: 7
-                    width: [[9,0.25px],[10,2px],[13,4px]]
+                    width: [[9,0.25px],[10,2px],[11,3px],[13,4px],[15,6px]]
                     color: [[9,[0.396,0.833,0.920]],[10,[0.886,0.937,0.988]]]
                 lines:
                     order: 10
@@ -973,10 +973,11 @@ layers:
                     style: lines
                     order: 30
                     color: [0.886,0.937,0.988]
-                    width: [[9,0px],[10,2px],[11,1.5px],[12,3px],[13,3.5px],[14,4px],[15,4px],[16,4px],[18,8px]]
+                    width: [[9,0px],[10,2px],[11,1.5px],[12,3px],[13,3.5px],[14,4px],[15,5px],[16,6px],[18,8px]]
                 lines:
                     order: 30
-                    color: [[8,[0.635,0.737,0.753]],[13,[0.635,0.737,0.753]],[14,[0.569,0.722,0.749]],[15,[0.397,0.743,0.809]]]
+                    # color: [[8,[0.635,0.737,0.753]],[13,[0.635,0.737,0.753]],[14,[0.569,0.722,0.749]],[15,[0.397,0.743,0.809]]]
+                    color: [[8,[0.635,0.737,0.753]],[13,[0.635,0.737,0.753]],[14,[0.543,0.740,0.780]]]
                     width: [[8,0.5px],[10,0.5px],[11,0.5px],[12,0.75px],[13,1px],[14,1px],[15,1px],[16,1px],[17,1.5px]]
                     join: round
             early:
