--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -997,10 +997,21 @@ layers:
             #river center lines, not boundaries for polygons
             filter: { kind: [river,canal,stream,dam,ditch,drain], $zoom: { min: 11 } }
             draw:
+                # lines:
+                #     order: 3
+                #     color: [0.397,0.743,0.809]
+                #     width: [[11,0.3px],[12,0.5px],[13,0.75px],[14,1px],[16,1.25px]]
+                #     join: round
+                double-border-light:
+                    style: lines
+                    order: 3
+                    color: [[12,[0.745,0.800,0.808]],[14,[0.543,0.740,0.780]]]
+                    width: [[9,0px],[11,0px],[12,2px],[13,3px],[14,4px],[15,4px],[16,6px],[17,8px]]
                 lines:
                     order: 3
-                    color: [0.397,0.743,0.809]
-                    width: [[11,0.3px],[12,0.5px],[13,0.75px],[14,1px],[16,1.25px]]
+                    # color: [[8,[0.635,0.737,0.753]],[13,[0.635,0.737,0.753]],[14,[0.569,0.722,0.749]],[15,[0.397,0.743,0.809]]]
+                    color: [0.886,0.937,0.988]
+                    width: [[8,0px],[10,0px],[11,1px],[12,1.5px],[13,2px],[14,3px],[15,3px],[16,4px],[17,5px]]
                     join: round
 
     subway-light-rail:
