--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -1006,12 +1006,12 @@ layers:
                     style: lines
                     order: 3
                     color: [[11,[0.671,0.788,0.812]],[14,[0.543,0.740,0.780]]]
-                    width: [[9,0px],[11,2.5px],[12,2.85px],[13,3.5px],[14,4px],[15,4px],[16,6px],[17,8px]]
+                    width: [[9,0px],[11,0px],[12,0px],[13,3.25px],[14,4px],[15,4px],[16,6px],[17,8px]]
                 lines:
                     order: 3
                     # color: [[8,[0.635,0.737,0.753]],[13,[0.635,0.737,0.753]],[14,[0.569,0.722,0.749]],[15,[0.397,0.743,0.809]]]
-                    color: [0.886,0.937,0.988]
-                    width: [[8,0px],[10,0px],[11,1.25px],[12,1.5px],[13,2px],[14,3px],[15,3px],[16,4px],[17,5px]]
+                    color: [[11,[0.671,0.788,0.812]],[12,[0.671,0.788,0.812]],[13,[0.886,0.937,0.988]]]
+                    width: [[8,0px],[10,0px],[11,0.75px],[12,1px],[13,2.5px],[14,3px],[15,3px],[16,4px],[17,5px]]
                     join: round
 
     subway-light-rail:
@@ -5170,7 +5170,7 @@ layers:
                         $zoom: { min: 10 }
                     draw:
                         dots2:
-                            color: *green9
+                            color: [0.486,0.839,0.722]
                             visible: true
 
             nature_reserve:
@@ -5291,14 +5291,14 @@ layers:
                 filter: { kind: [plant, generator, substation] }
                 draw:
                     dots2:
-                        color: *grey3
+                        color: [0.679,0.679,0.679]
                         visible: true
             railway:
                 filter:
                     kind: railway
                 draw:
                     dots2:
-                        color: *grey3
+                        color: [0.788,0.804,0.824]
                         visible: true
             recreation_ground:
                 filter:
