--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -1025,8 +1025,8 @@ layers:
             filter: { kind: railway }
             draw:
                 lines:
-                    color: grey
-                    width: [[14,1px],[16,2px],[18,5m]]
+                    color: [0.644,0.686,0.700]
+                    width: [[14,1px],[16,2px],[18,2px]]
         subway:
             filter: { kind: subway }
             draw:
@@ -1047,13 +1047,13 @@ layers:
         draw:
             lines:
                 interactive: true
-                color: [[14,'#bbb'],[16,'#999']]
-                width: [[15,0.5px],[16,0.75px],[18,1m]]
+                color: [0.588,0.671,0.698]
+                width: [[15,0.5px],[16,0.75px],[18,1px]]
         service:
             filter: { service: true }
             draw:
                 lines:
-                    color: *rail2
+                    color: [0.588,0.671,0.698]
                     width: [[14,0px],[15,0.4px],[16,0.6px],[18,0.7m]]
         z-order:
             #filter: { $zoom: {min: 12} }
@@ -1471,7 +1471,7 @@ layers:
                         draw:
                             lines:
                                 outline:
-                                    color: red
+                                    color: [0.757,0.839,0.788]
                     nature_reserve:
                         filter: { landuse_kind: nature_reserve }
                         draw:
@@ -1693,7 +1693,7 @@ layers:
                     draw:
                         lines:
                             outline:
-                                color: red
+                                color: [0.757,0.839,0.788]
                 nature_reserve:
                     filter: { landuse_kind: nature_reserve }
                     draw:
@@ -5191,7 +5191,7 @@ layers:
                 # default for national forests and more?
                 draw:
                     dots2:
-                        color: [[4,[0.655,0.800,0.796]],[8,[0.588,0.780,0.773]],[9,[0.242,0.737,0.712]],[14,[0.224,0.682,0.659]]]
+                        color: [[4,[0.655,0.800,0.796]],[8,[0.588,0.780,0.773]],[9,[0.242,0.737,0.712]],[14,[0.412,0.733,0.718]]]
                         order: function() { return feature.sort_key + 1 || 1; }
                         visible: true
 
