--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -1037,8 +1037,8 @@ layers:
             filter: { kind: light_rail, $zoom: { min: 15 } }
             draw:
                 lines:
-                    color: grey
-                    width: [[14,0.5px],[16,1px],[17,1.5px],[19,1m]]
+                    color: [0.588,0.671,0.698]
+                    width: [[14,0px],[15,0.6px],[16,1px],[17,1.5px],[19,1m]]
                     order: 30
 
     railway-late:
@@ -1048,7 +1048,7 @@ layers:
             lines:
                 interactive: true
                 color: [0.588,0.671,0.698]
-                width: [[15,0.75px],[16,0.75px],[18,1px]]
+                width: [[12,0px],[13,0.25px],[14,0.4px],[15,0.75px],[16,0.75px],[18,1px]]
         service:
             filter: { service: true }
             draw:
@@ -5101,7 +5101,7 @@ layers:
                     filter: { operator: [ "United States National Park Service", "US National Park Service" ] }
                     draw:
                         dots2:
-                            color: [[4,[0.000,0.745,0.497]],[9,[0.000,0.631,0.421]]]
+                            color: [[4,[0.525,0.765,0.686]],[9,[0.416,0.737,0.631]]]
                             visible: true
                             # color: [[4,[0.242,0.737,0.712]],[12,[0.224,0.682,0.659]]]
         tier2:
@@ -5191,7 +5191,7 @@ layers:
                 # default for national forests and more?
                 draw:
                     dots2:
-                        color: [[4,[0.655,0.800,0.796]],[8,[0.588,0.780,0.773]],[9,[0.242,0.737,0.712]],[14,[0.412,0.733,0.718]]]
+                        color: [[4,[0.655,0.800,0.796]],[11,[0.588,0.780,0.773]],[12,[0.242,0.737,0.712]],[15,[0.412,0.733,0.718]]]
                         order: function() { return feature.sort_key + 1 || 1; }
                         visible: true
 
@@ -5235,7 +5235,7 @@ layers:
                     kind: university
                 draw:
                     dots2:
-                        color: *brown1
+                        color: [0.827,0.753,0.682]
                         order: function() { return (feature.sort_key - 2) || 1; }
                         visible: true
         tier4:
