color work taxiways with runways

--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -2065,7 +2065,7 @@ layers:
                     order: 10
                     color: [[10,[0.4,0.4,0.4]],[11,[0.50,0.50,0.50]],[12,[0.7,0.7,0.7]],[13,[0.75,0.75,0.75]],[14,[0.95,0.95,0.95]]]
                     cap: butt
-                    width: [[9,0px],[10,0.75px],[11,1.25px],[12,2px],[13,4px],[14,8px], [15, 16px], [16, 32px], [17, 60m]]
+                    width: [[9,0px],[10,0.75px],[11,1.25px],[12,2px],[13,4px],[14,8px],[15,16px],[16,32px],[17,60m]]
                     # outline:
                     #     color: [0.778,0.778,0.797]
             # Features come in at zoom 9, but include mostly minor airports without POIs until z13
@@ -2084,8 +2084,8 @@ layers:
                 draw:
                     lines:
                         order: 9
-                        color: [0.913,0.913,0.935]
-                        width: [[13, 1px], [14, 2px], [15, 4px], [16, 8px], [17, 25m]]
+                        color: [[13,[0.913,0.913,0.913]],[15,[0.923,0.923,0.923]],[16,[0.95,0.95,0.95]]]
+                        width: [[13,1px],[14,2px],[15,3px],[16,7px],[17,25m]]
                         outline:
                             color: [0.778,0.778,0.797]
                 early:
