--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -4015,8 +4015,9 @@ layers:
                 priority: 10
             text:
                 visible: false    # labels are enabled by each layer below
-                move_into_tile: false
-                offset: [[13,13px],[14,15px],[16,19px]]
+                move_into_tile: false # preserves text alignment w/icons in JS
+                anchor: bottom
+                offset: [[13, [0, 6px]], [16, [0, 8px]], [19, [0, 10px]]] # offset tracks alongside icon size (half icon height)
                 interactive: true
                 priority: 11
                 font:
