--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -1251,7 +1251,7 @@ layers:
                         text_source: function() { if( feature.ref && feature.name ) { return feature.ref + " " + feature.name; } else { return feature.name; } }
                         font:
                             fill: [0.0,0.0,0.0]
-                            size: 11px
+                            size: 12px
                             # stroke: { color: [0.976,0.541,0.490], width: 4 }
             labels-highway-z15:
                 filter:
@@ -1339,7 +1339,7 @@ layers:
                                 text_source: function() { if( feature.ref && feature.name ) { return feature.ref + " " + feature.name; } else { return feature.name; } }
                                 font:
                                     fill: [0.0,0.0,0.0]
-                                    size: 9px
+                                    size: 12px
                                     stroke: { color: [0.95,0.95,0.95], width: 0.1px }
                     labels-trunk_primary-route-z15:
                         filter: { $zoom: [15] }
@@ -1376,9 +1376,9 @@ layers:
                                 fill: [0.4,0.4,0.4]
                                 size: 11px
                                 # stroke: { color: [1.000,0.631,0.590], width: 3 }
-                labels-trunk_primary-z13-z14:
+                labels-trunk_primary-z13:
                     filter:
-                        $zoom: [13,14]
+                        $zoom: [13]
                     draw:
                         text:
                             priority: 23
@@ -1386,6 +1386,18 @@ layers:
                             text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
                             font:
                                 fill: [0.15,0.15,0.15]
+                                size: 12px
+                                stroke: { color: *text_stroke, width: 2 }
+                labels-trunk_primary-z14:
+                    filter:
+                        $zoom: [14]
+                    draw:
+                        text:
+                            priority: 23
+                            visible: *text_visible_trunk_primary
+                            text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
+                            font:
+                                fill: [0.05,0.05,0.05]
                                 size: 12px
                                 stroke: { color: *text_stroke, width: 2 }
                 labels-trunk_primary-z15:
@@ -1526,7 +1538,7 @@ layers:
                             visible: *text_visible_secondary_e
                             text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
                             font:
-                                fill: [0.5,0.5,0.5]
+                                fill: [0.30,0.30,0.30]
                                 size: 12px
                                 stroke: { color: *text_stroke, width: 2 }
                 labels-secondary-z15:
@@ -1642,7 +1654,7 @@ layers:
                             text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
                             font:
                                 fill: [0.5,0.5,0.5]
-                                size: 9px
+                                size: 11px
                                 stroke: { color: *text_stroke_road4, width: 2 }
                 labels-tertiary-z15:
                     filter: { $zoom: [15] }
