--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -4435,7 +4435,14 @@ layers:
             station-train-subway:
                 filter: { kind: [station, train-station, train_station], $zoom: { min: 11 } }
                 visible: *label_visible_station
-                draw:   { icons: { visible: *icon_visible_station, sprite: train-station, size: [[13,12px],[14,14px],[15,16px],[17,20px]] }, text: { visible: *text_visible_station } }
+                draw:
+                    icons:
+                        visible: *icon_visible_station
+                        sprite: train-station
+                        size: [[13, 12px], [14, 14px], [15, 16px], [17, 20px]]
+                    text:
+                        visible: *text_visible_station
+                        offset: [[13, [0, 6px]], [14, [0, 7px]],[15, [0, 8px]], [17, [0, 10px]]]
                 low-priority-early:
                     filter: { kind_tile_rank: { min: 5 }, area: false, $zoom: { min: 0, max: 14 } }
                     draw:
@@ -4465,6 +4472,8 @@ layers:
                 draw:
                     icons:
                         size: [[13, 12px], [16, 18px]]
+                    text:
+                        offset: [[13, [0, 6px]], [16, [0, 9px]]]
             bus-stop-bus-station-labels:
                 filter:
                     kind: [bus_stop, bus_station]
@@ -4482,12 +4491,11 @@ layers:
                         kind: [bus_stop]
                         $zoom: { max: 19 }
                     draw:
-                        text:
-                            visible: false
                         icons:
                             size: [[13, 8px], [19, 18px]]
+                        text:
+                            visible: false
 
-            # examples of different icons mapped to feature properties
             icons:
                 adult-boutique:
                     filter: { kind: [erotic, adult_boutique] }
