--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -2473,6 +2473,7 @@ layers:
         draw:
             text:
                 visible: false    # labels are enabled by each layer below
+                anchor: bottom
                 font:
                     family: *text_font_family
                     # weight: 500
@@ -2689,7 +2690,6 @@ layers:
                 icons:
                     priority: 5
                 text:
-                    offset: [0, 8px]
                     priority: 6
 
             populated-places-natural-earth-z2:
@@ -2698,6 +2698,7 @@ layers:
                     text:
                         interactive: true
                         visible: *text_visible_populated_places
+                        offset: [0, 3.5px] # half icon size
                         font:
                             size: 10px
                             fill: *text_fill
@@ -2715,6 +2716,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 3.5px] # half icon size
                             font:
                                 size: 11px
                                 fill: *text_fill
@@ -2729,6 +2731,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 3.5px] # half icon size
                             font:
                                 size: 9px
                                 fill: *text_fill
@@ -2746,6 +2749,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 4.5px] # half icon size
                             font:
                                 size: 13px
                                 fill: *text_fill
@@ -2761,6 +2765,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 4.5px] # half icon size
                             font:
                                 size: 10px
                                 fill: *text_fill
@@ -2778,6 +2783,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 6.5px] # half icon size
                             font:
                                 size: 13px
                         icons:
@@ -2799,6 +2805,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 4.5px] # half icon size
                             font:
                                 size: 11px
                         icons:
@@ -2826,6 +2833,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 4.5px] # half icon size
                             font:
                                 fill: [0.25,0.25,0.25]
                                 size: 9px
@@ -2856,6 +2864,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 6.5px] # half icon size
                             font:
                                 fill: *text_fill
                                 size: 15px
@@ -2878,6 +2887,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 5.5px] # half icon size
                             font:
                                 fill: *text_fill
                                 size: 12px
@@ -2906,6 +2916,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 4.5px] # half icon size
                             font:
                                 fill: [0.25,0.25,0.25]
                                 size: 10px
@@ -2936,6 +2947,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 7px] # half icon size
                             font:
                                 fill: *text_fill
                                 size: 16px
@@ -2958,6 +2970,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 5.5px] # half icon size
                             font:
                                 fill: *text_fill
                                 size: 13px
@@ -2986,6 +2999,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 4.5px] # half icon size
                             font:
                                 fill: [0.25,0.25,0.25]
                                 size: 11px
@@ -3025,6 +3039,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 7px] # half icon size
                             font:
                                 size: 16px
                         icons:
@@ -3047,6 +3062,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 5.5px] # half icon size
                             font:
                                 size: 13px
                         icons:
@@ -3076,6 +3092,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 4.5px] # half icon size
                             font:
                                 fill: [0.25,0.25,0.25]
                                 size: 11px
@@ -3106,6 +3123,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 4px] # half icon size
                             font:
                                 fill: [0.30,0.30,0.30]
                                 size: 8px
@@ -3137,6 +3155,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 7px] # half icon size
                             font:
                                 size: 16px
                         icons:
@@ -3158,6 +3177,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 5.5px] # half icon size
                             font:
                                 size: 13px
                         icons:
@@ -3185,6 +3205,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 4.5px] # half icon size
                             font:
                                 size: 11px
                         icons:
@@ -3223,6 +3244,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 7px] # half icon size
                             font:
                                 size: 17px
                         icons:
@@ -3246,6 +3268,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 5.5px] # half icon size
                             font:
                                 size: 13px
                         icons:
@@ -3275,6 +3298,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 4.5px] # half icon size
                             font:
                                 fill: [0.25,0.25,0.25]
                                 size: 11px
@@ -3305,6 +3329,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 4px] # half icon size
                             font:
                                 fill: [0.30,0.30,0.30]
                                 size: 9px
@@ -3336,6 +3361,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 7px] # half icon size
                             font:
                                 size: 16px
                         icons:
@@ -3357,6 +3383,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 5.5px] # half icon size
                             font:
                                 size: 13px
                         icons:
@@ -3384,6 +3411,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 4.5px] # half icon size
                             font:
                                 size: 11px
                         icons:
@@ -3422,6 +3450,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 7px] # half icon size
                             font:
                                 size: 17px
                         icons:
@@ -3437,6 +3466,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 5.5px] # half icon size
                             font:
                                 size: 13px
                         icons:
@@ -3452,6 +3482,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 4.5px] # half icon size
                             font:
                                 fill: [0.25,0.25,0.25]
                                 size: 11px
@@ -3468,6 +3499,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 4px] # half icon size
                             font:
                                 fill: [0.35,0.35,0.35]
                                 size: 9px
@@ -3485,6 +3517,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 7px] # half icon size
                             font:
                                 size: 16px
                         icons:
@@ -3506,6 +3539,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 5.5px] # half icon size
                             font:
                                 size: 13px
                         icons:
@@ -3533,6 +3567,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 4.5px] # half icon size
                             font:
                                 size: 11px
                         icons:
@@ -3608,6 +3643,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 7px] # half icon size
                             font:
                                 size: 16px
                         icons:
@@ -3629,6 +3665,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 5.5px] # half icon size
                             font:
                                 size: 13px
                         icons:
@@ -3656,6 +3693,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 4.5px] # half icon size
                             font:
                                 size: 11px
                         icons:
@@ -3669,7 +3707,7 @@ layers:
                                 font:
                                     size: 14px
                             icons:
-                                    sprite: capital-s
+                                sprite: capital-s
                     state_capital:
                         filter: { state_capital: yes }
                         draw:
@@ -3730,6 +3768,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 7px] # half icon size
                             font:
                                 size: 16px
                         icons:
@@ -3751,6 +3790,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 5.5px] # half icon size
                             font:
                                 size: 13px
                         icons:
@@ -3778,6 +3818,7 @@ layers:
                         text:
                             interactive: true
                             visible: *text_visible_populated_places
+                            offset: [0, 4.5px] # half icon size
                             font:
                                 size: 11px
                         icons:
@@ -3791,7 +3832,7 @@ layers:
                                 font:
                                     size: 14px
                             icons:
-                                    sprite: capital-s
+                                sprite: capital-s
                     state_capital:
                         filter: { state_capital: yes }
                         draw:
